--- a/node/package.json
+++ b/node/package.json
@@ -7,7 +7,8 @@
         "typescript": "^4.0.2"
     },
     "scripts": {
-        "bench": "ts-node ./benchmark.ts"
+        "bench": "ts-node ./benchmark.ts",
+        "test": "ts-node ./test.ts"
     },
     "dependencies": {
         "@types/he": "^1.1.1",
