--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 edition = "2018"
 name = "htmlentity"
-version = "1.2.0"
+version = "1.3.0"
 authors = ["ganmin <jxz_211@163.com>"]
 keywords = ["entity", "html-entity", "html-escape", "html-encode", "html-decode"]
-categories = ["encoding", "parsing", "wasm"]
-description = "Encode a unicode character to html entity, decode html entity to a unicode character."
+categories = ["encoding", "parsing"]
+description = "A library for encoding and decoding HTML entities."
 repository = "https://github.com/fefit/htmlentity"
 homepage = "https://github.com/fefit/htmlentity"
-exclude = ["node/**/*.*","pkg/**/*.*", "build.sh", "codecov.yml", ".travis.yml"]
+exclude = ["node/**/*.*","pkg/**/*.*", "build.sh", "codecov.yml"]
 license = "MIT"
 
 [dependencies]
@@ -21,8 +21,8 @@ path = "src/lib.rs"
 crate-type = ["cdylib", "rlib"]
 
 [dev-dependencies]
-criterion = "0.3"
-grcov = "0.6.1"
+criterion = "0.4.0"
+grcov = "0.8.16"
 
 [[bench]]
 name = "benchmark"
