--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,8 +40,8 @@ jobs:
           export CARGO_INCREMENTAL=0
           export RUSTFLAGS="-Zprofile -Ccodegen-units=1 -Copt-level=0 -Clink-dead-code -Coverflow-checks=off -Zpanic_abort_tests -Cpanic=abort"
           export RUSTDOCFLAGS="-Cpanic=abort"
-          cargo build --features full --verbose $CARGO_OPTIONS
-          cargo test --features full --verbose $CARGO_OPTIONS
+          cargo build --verbose $CARGO_OPTIONS
+          cargo test --verbose $CARGO_OPTIONS
           zip -0 ccov.zip `find . \( -name "htmlentity*.gc*" \) -print`;
           ./grcov ccov.zip -s . -t lcov --llvm --branch --ignore-not-existing --ignore "/*" -o lcov.info;
           bash <(curl -s https://codecov.io/bash) -f lcov.info;
